feat: implement JWT-based authentication system
- Add Spring Security with JWT token authentication
- Create User entity with usage tracking fields (totalTokensUsed, analysesRun)
- Implement UserRepository with email lookup
- Add JwtService for token generation and validation (24hr expiration)
- Create JwtAuthenticationFilter for request authentication
- Implement UserDetailsServiceImpl for Spring Security integration
- Add SecurityConfig with stateless session management
- Create AuthController with register, login, and /me endpoints
- Add DTOs: RegisterRequest, AuthenticationRequest, AuthenticationResponse
- Configure CSRF and CORS disabled for stateless REST API
- Tested: successful user registration and JWT token generation

Tech stack: Spring Security 6.5.5, JJWT 0.12.3, BCrypt password hashing

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>25</java.version>
+		<java.version>21</java.version>
 		<spring-ai.version>1.0.2</spring-ai.version>
 	</properties>
 	<dependencies>
@@ -65,6 +65,27 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!--Spring Security + JWT-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.12.3</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.12.3</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.12.3</version>
 		</dependency>
 
 		<dependency>
